--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ name: elementary apps
 
 # Short bio or description (displayed in the header)
 description: 3rd party elementary software
-description_html: 3rd party <a href="http://elementaryos.org">elementary</a> software
+description_html: 3rd party <a href="http://elementary.io">elementary</a> software
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /elementary-apps/images/apps-logo_4x64.png
