--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ footer-links:
   rss: true
   twitter: 
   stackoverflow: 
+  youtube: # channel/<your_long_string> or user/<user-name>
 
 # Your disqus shortname, entering this will enable commenting on posts
 disqus: 
@@ -39,7 +40,7 @@ piwik_analytics: true
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://quassy.github.io/elementary-apps/
+url: https://quassy.github.io/elementary-apps/
 
 # If you're hosting your site at a Project repository on GitHub pages 
 # (http://yourusername.github.io/repository-name)
