--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: 3rd party elementary software
 description_html: 3rd party <a href="http://elementary.io">elementary</a> software
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /apps/img/apps-logo_4x64.png
+avatar: /elementary-apps/img/apps-logo_4x64.png
 
 #
 # Flags below are optional
@@ -40,13 +40,13 @@ piwik_analytics: true
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://elementarians.github.io/apps
+url: https://quassy.github.io/elementary-apps
 
 # If you're hosting your site at a Project repository on GitHub pages 
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/apps"
+baseurl: "/elementary-apps"
 
 #
 # !! You don't need to change any of the configuration flags below !!
