--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,8 @@ exclude:
 collections:
   - apps:
       output: true
-      permalink: /:title/
+      permalink: /:name/
+      title: /:name/
 
 defaults:
   - scope:
