--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ exclude:
 collections:
   - apps:
       output: true
-      permalink: /:title/
+      permalink: /test/:title/
 
 defaults:
   - scope:
