--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
 
 # Your disqus shortname, entering this will enable commenting on posts
-disqus: 
+disqus: elementary-apps
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics: 
