Fix heading wrap, misc

--- a/_config.yml
+++ b/_config.yml
@@ -10,17 +10,18 @@ avatar: /elementary-apps/img/apps-logo_4x64.png
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble: 
-  email: 
-  facebook: 
-  flickr: 
+  dribbble:
+  email:
+  facebook:
+  flickr:
   github: quassy/elementary-apps
-  instagram: 
-  linkedin: 
-  pinterest: 
+  google_plus:
+  instagram:
+  linkedin:
+  pinterest:
   rss: true
-  twitter: 
-  stackoverflow: 
+  twitter:
+  stackoverflow:
   youtube: # channel/<your_long_string> or user/<user-name>
 
 # Your disqus shortname, entering this will enable commenting on posts
@@ -34,7 +35,7 @@ piwik_analytics: true
 # Used for Sitemap.xml and your RSS feed
 url: https://quassy.github.io/elementary-apps
 
-# If you're hosting your site at a Project repository on GitHub pages 
+# If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
