Change start URL to elementary-apps

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@ layout: null
 {
   "name": "{{ site.name | xml_escape }}",
   "short_name": "{{ site.name | xml_escape }}",
-  "start_url": "/",
+  "start_url": "{{ site.baseurl }}/",
   "display": "standalone",
   "theme_color": "#ffffff",
   "background_color":"#ffffff",
