Change matomo tracking url

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ disqus: elementary-apps
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics: 
-matomo_analytics: https://qxy.uber.space/piwik/
+matomo_analytics: https://stats.quassy.de
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
